--- a/index.html
+++ b/index.html
@@ -78,9 +78,16 @@
                 <div class="WebDesign">
                     <h4>Web Design Final Exam</h4>
                     <h6>March 2023 - May 2023 &middot; associated with Bellbrook High School</h6>
-                    <p>I created a website for a fictional DJ following specifications created by my teacher.I created a website for a fictional DJ following specifications created by my teacher.</p>
+                    <p>I created a website for a fictional DJ following specifications created by my teacher. I created a website for a fictional DJ following specifications created by my teacher.</p>
                     <p>Skills: Project Planning &middot; Time Management &middot; JavaScript (Programming Language) &middot; Design &middot; Cascading Style Sheets (CSS) &middot; HTML &middot; English</p>
                     <a href="https://aaronthemagnificent.github.io/DJTurntable/">My live website on GitHub for the fictional DJ Turntable.</a>
+                </div>
+                <div class="AdventureTime">
+                    <h4>Adventure Time RPG Game</h4>
+                    <h6>August 2021 - Present &middot; associated with Bellbrook High School</h6>
+                    <p>A text-based RPG set in the world of Ooo from the TV show Adventure Time! Explore the world and talk to some of your favourite characters.</p>
+                    <p>Skills: Project Planning &middot; Time Management &middot; Java (Programming Language) &middot; Design</p>
+                    <a href="https://aaronthemagnificent-vigilant-system-x5rx4p75gv52pxj9.github.dev/">My Adventure Time game uploaded on Github</a>
                 </div>
             </div>
             <div class="exp">
@@ -141,6 +148,7 @@
             <p>Contact my linkedIn at Aaron Cole Hodson</p>
             <p>Email me at candc202099@gmail.com</p>
             <p>Or call me at 937-572-5927</p>
+            <p>Check out my Github to see some of my projects at aaronthemagnificent</p>
             <p>Dayton Ohio, 45305</p>
         </footer>
     </div>
