--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <p>A camp to help teach kids about artificial intelligence. I took their three-week summer course which explained all forms of machine learning, including deep learning, and helped me put my experience as a frontend developer to the test.</p>
                 </div>
                 <div class="volunteering">
-                    <h2>volunteering</h2>
+                    <h2>Volunteering</h2>
                     <h4>Supportive Peers</h4>
                     <h5>Aug 2021 - May 2023 &middot; 1 year &amp; 10 months</h5>
                     <p>I spent time with a kid who had special needs and was a friend to him. I helped him get a friend in his grade and his teacherand aid said they saw a great improvement in his listening and involvement. </p>
@@ -126,14 +126,14 @@
                     <h1>Awards & Honors</h1>
                 </div>
                 <div class="csAward">
-                    <p>Top Computer Science AwardTop Computer Science Award</p>
-                    <p>Issued by My Computer Science Teacher &middot; May 2023</p>
+                    <p>Top Computer Science Award</p>
+                    <p>Issued by my Computer Science Teacher &middot; May 2023</p>
                     <p>For passing the three hardest computer science classes of Advanced Game Design, AP Computer Science A 
                         and AP Computer Science Principals.</p>
                 </div>
                 <div class="englishAward">
-                    <p>Top English AwardTop English Award</p>
-                    <p>Issued by My English Teacher &middot; May 2023</p>
+                    <p>Top English Award</p>
+                    <p>Issued by my English Teacher &middot; May 2023</p>
                     <p>For exceptional writing and evaluation of literary works.</p>
                 </div>
                 <div class="aiHonor">
