--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                     <h4>AI Camp</h4>
                     <h6>Front-End Engineer &middot; Jun 2023 - Jun 2023</h6>
                     <p>A camp to help teach kids about artificial intelligence. I took their three-week summer course which explained all forms of machine learning, including deep learning, and helped me put my experience as a frontend developer to the test.</p>
+                    <h4>Drones in School</h4>
+                    <h6>Mechanical-Engineer &middot; Aug 2021 - Mar 2022</h6>
+                    <p>A program for Highschools to design, create, and fly drones against other members with design briefs, presentations, and sponsorships all managed by the students.</p>
                 </div>
                 <div class="volunteering">
                     <h2>Volunteering</h2>
@@ -141,6 +144,12 @@
                     <p>Issued by AI Camp Teacher &middot; Jul 2023</p>
                     <p>After completing the three-week AI Camp course, my instructor said I was "extremely skilled in frontend development, reliable, proactive, great team player."</p>
                     <p>On a scale of 1-5, 5 being perfection, I was given a 3.5 on communication, 3.5 on proactiveness, and a 4 on reliability with a 4 overall.</p>
+                </div>
+                <div class="droneAward">
+                  <p>Drones in School Nationals 2nd Place</p>
+                  <p>Issued by Drone in School &middot; Mar 2023</p>
+                  <p>The first year my school participated in Drones in School we made it to Nationals in Flordia and won 2nd place.</p>
+                  <p>Our first year for our school to participate in the Drones in School program and we won 2nd place at Nationals. I helped design the drone on paper, in CAD, and the physical creation. I helped get sponsorships, plan our money, and promote our team. We had to complete a flight test going through several obstacles all of which we completed and to demonstrate our project with a design brief that I helped to write.</p>
                 </div>
             </div>
         </main>
