--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                     <p>Skills: Project Planning &middot; Time Management &middot; JavaScript (Programming Language) &middot; Design &middot; Cascading Style Sheets (CSS) &middot; HTML &middot; English</p>
                     <a href="https://aaronthemagnificent.github.io/DJTurntable/">My live website on GitHub for the fictional DJ Turntable.</a>
                 </div>
-                <div class="AdventureTime">
+                <!--<div class="AdventureTime">
                     <h4>Adventure Time RPG Game</h4>
                     <h6>August 2021 - Present &middot; associated with Bellbrook High School</h6>
                     <p>A text-based RPG set in the world of Ooo from the TV show Adventure Time! Explore the world and talk to some of your favourite characters.</p>
                     <p>Skills: Project Planning &middot; Time Management &middot; Java (Programming Language) &middot; Design</p>
                     <a href="https://aaronthemagnificent-vigilant-system-x5rx4p75gv52pxj9.github.dev/">My Adventure Time game uploaded on Github</a>
-                </div>
+                </div>-->
             </div>
             <div class="exp">
                 <h1>Experiences</h1>
